[DOCS] Added extension name to Settings.cfg

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,9 +1,6 @@
 [general]
 
-; endless list of all of the general simple settings
-; you can use in 'conf.py'
-
-project     = Extensionname (Title Of Project)
+project     = Configurable Data Provider
 version     = 0.0
 release     = 0.0.0
 t3author    = Pixelant.net
