--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,13 @@
 		}
 	],
 	"require": {
-		"typo3/cms-core": "^8.7 || ^9.5",
-		"php": "^7.2"
+		"typo3/cms-core": "^8.7 || ^9.5.4 || ^10.2",
+		"php": "~7.2 || ~7.3 || ~7.4"
 	},
 	"require-dev": {
 		"squizlabs/php_codesniffer": "^3.3",
+		"helmich/typo3-typoscript-lint": "^1.5.0",
+		"friendsofphp/php-cs-fixer": "^2.16.1",
 		"nimut/testing-framework": "^4.0"
 	},
 	"replace": {
@@ -39,9 +41,32 @@
 		"bin-dir": ".Build/bin"
 	},
 	"scripts": {
+		"ci:php:lint": "find *.php Classes/ Configuration/ Tests/ -name '*.php' -print0 | xargs -0 -n 1 -P 4 php -l",
+		"ci:php:sniff": "phpcs Classes Tests",
+		"ci:ts:lint": "typoscript-lint -c Configuration/TsLint.yml --ansi -n --fail-on-warnings -vvv Configuration/TypoScript/",
+		"ci:tests:unit": "phpunit -c .Build/vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/Unit/",
+		"ci:tests": [
+			"@ci:tests:unit"
+		],
+		"ci:dynamic": [
+			"@ci:tests"
+		],
+		"ci:static": [
+			"@ci:php:lint",
+			"@ci:php:sniff",
+			"@ci:ts:lint"
+		],
+		"ci": [
+			"@ci:static"
+		],
+		"link-extension": [
+			"@php -r 'is_dir($extFolder=__DIR__.\"/.Build/public/typo3conf/ext/\") || mkdir($extFolder, 0777, true);'",
+			"@php -r 'file_exists($extFolder=__DIR__.\"/.Build/public/typo3conf/ext/pxa_data_provider\") || symlink(__DIR__,$extFolder);'"
+		],
+		"fix:php-cs": "php-cs-fixer fix",
+		"fix:php-sniff": "phpcbf Classes Tests",
 		"post-autoload-dump": [
-			"mkdir -p .Build/Web/typo3conf/ext/",
-			"[ -L .Build/Web/typo3conf/ext/pxa_data_provider ] || ln -snvf ../../../../. .Build/Web/typo3conf/ext/pxa_data_provider"
+			"@link-extension"
 		]
 	},
 	"extra": {
@@ -50,7 +75,7 @@
 		},
 		"typo3/cms": {
 			"cms-package-dir": "{$vendor-dir}/typo3/cms",
-			"web-dir": ".Build/Web"
+			"web-dir": ".Build/public"
 		}
 	}
 }
