--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
 	"scripts": {
 		"ci:php:lint": "find *.php Classes/ Configuration/ Tests/ -name '*.php' -print0 | xargs -0 -n 1 -P 4 php -l",
 		"ci:php:sniff": "phpcs Classes Tests",
+		"cs:php:fix": "phpcbf Classes Tests",
 		"ci:ts:lint": "typoscript-lint -c Configuration/TsLint.yml --ansi -n --fail-on-warnings -vvv Configuration/TypoScript/",
 		"ci:tests:unit": "phpunit -c .Build/vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/Unit/",
 		"ci:tests": [
