--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 		"php": "~7.2 || ~7.3 || ~7.4"
 	},
 	"require-dev": {
+		"typo3/cms-composer-installers": ">=1.4.4",
 		"squizlabs/php_codesniffer": "^3.3",
 		"helmich/typo3-typoscript-lint": "^1.5.0",
 		"friendsofphp/php-cs-fixer": "^2.16.1",
